--- a/configs/nftables_lxd.conf
+++ b/configs/nftables_lxd.conf
@@ -1,16 +1,12 @@
 #!/usr/sbin/nft -f
-### Simple ruleset for an LXD-based system
+### Simple ruleset for an LXD-based system using a bridge network
 
 flush ruleset
 
 table inet filter {
   chain input {
     type filter hook input priority filter; policy drop;
-
-    # ALLOW all traffic on loopback
     iifname lo accept;
-
-    # ALLOW established and related, DROP invalid
     ct state { established, related } accept;
     ct state { invalid } drop;
 
