--- a/configs/nftables.conf
+++ b/configs/nftables.conf
@@ -10,8 +10,8 @@ table inet filter {
     ct state { established, related } accept;
     ct state { invalid } drop;
 
-    # ALLOW services: ssh, http, https
-    #tcp dport { 22, 80, 443 } accept;
+    # ALLOW services: ssh
+    tcp dport ssh accept;
   }
   chain forward {
     type filter hook forward priority filter; policy drop;
